# MVB_SR_POC

./: .gitignore  settings.gradle.kts  validate_bitmap_pool.sh
.claude/: settings.local.json
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/.claude/: settings.local.json
app/src/main/assets/config/: sr_config.json
app/src/main/assets/models/: DSCF_256x256_dynamic_range_quant.tflite  DSCF_256x256_float16.tflite  DSCF_256x256_float32.tflite  DSCF_384x384x12_int8.tflite  DSCF_384x384x1_int8.tflite  DSCF_720p_x2_int8.tflite  DSCF_dynamic_range_quant.tflite  DSCF_float16.tflite  DSCF_float32.tflite  DSCF_int8.tflite  DSCF_integer_quant_with_int16_act.tflite  qsr_s_1.5x_720p_float16.tflite  (+14 more)
app/src/main/cpp/: CMakeLists.txt  jni_utils.cpp  jni_utils.h  native-lib.cpp  sr_engine.cpp  sr_engine.h
app/src/main/cpp/memory/: aligned_allocator.cpp  aligned_allocator.h  aligned_allocator_test.cpp  jni_memory_bridge.cpp  memory_pool.cpp  memory_pool.h  memory_tracker.cpp  memory_tracker.h
gradle/wrapper/: gradle-wrapper.properties
plan-perf-opt/1.1-directbytebuffer-migration/: COMPLETION_REPORT.md  README.md  progress_list.md
plan-perf-opt/1.2-buffer-pool/: COMPLETION_REPORT.md  README.md  progress_list.md
plan-perf-opt/1.3-bitmap-optimization/: COMPLETION_REPORT.md  README.md  VALIDATION_GUIDE.md  progress_list.md
plan-perf-opt/3.1-jni-setup/: COMPLETION_REPORT.md  EXCEPTIONAL_COMPLETION.md  README.md  progress_list.md
plan-perf-opt/3.2-native-memory/: COMPLETION_REPORT.md  DOCUMENTATION_CORRECTION.md  README.md  progress_list.md
(+61 files in other folders)
